Fix overflowing imgs

--- a/src/Client/css/im.css
+++ b/src/Client/css/im.css
@@ -2049,7 +2049,7 @@ select {
     justify-content: center;
 }
 
-.large-avatar-profile {
+.large-avatar-profile img {
     max-width: 100%;
 }
 
